styles.css
/* Main background: #2B2733
Text on main background: #CBC9CF
Header, cards: #46424D
Card shadow: #26222D
Text on header and cards: #FFF
Study: #B3FD78
Meditate: #C278FD
Exercise: #FD8078
Error: #EFB7EC */


* {
margin: 0;
font-family: 'Montserrat', sans-serif;
color: #FFF;
}

/* ---------HEADER-------------- */

header {
  font-size: 1.2em;
  background-color: #46424D;
  padding: 15px;
  text-align: center;
}

/* ---------MAIN CONTENT----------- */

main {
  display: flex;
  background-color: #2B2733;
  height: 100%;
}

.main-title {
  font-size: 1.4em;
  margin: 20px 0px 10px 18px;
  color: #CBC9CF;
}

.main-left-box {
  border-right: solid;
  border-color: #46424D;
  flex: 2;
}

.main-right-box {
  flex: 1;
}

/* ---------FORM CARD------------- */

form {
  margin: 0px 20px 30px 20px;
  padding: 40px 80px;
  background-color: #46424D;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
  display: flex;
  flex-direction: column;
  border-radius: 3px;
  height: 75%;
}

form > * {
  margin: 35px;
}

 h2 {
   font-size: 1em;
   margin-bottom: 15px;
}

.category-container {
  display: flex;
  justify-content: space-between;
  list-style-type: none;
  padding: 0;
  margin-top: 0;
}

.category-input {
  -webkit-appearance: none;

}

 .category-label {
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex-basis: 30%;
   border-radius: 3px;
   border: 2px solid;
   padding: 10px 30px;
}

.category-icon {
  height: 22px;
  width: 22px;
  align-self: center;
}

.button-title {
  align-self: center;
  margin-top: 3px;
}

.study-box:checked + label {
  border-color: #B3FD78;
  color: #B3FD78;
}

.meditate-box:checked + label {
  border-color: #C278FD;
  color: #C278FD;
}

.exercise-box:checked + label {
  border-color: #FD8078;
  color: #FD8078;
}

/* ----------activity inputs----------- */

.activity-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  list-style-type: none;
  padding: 0;
}

.activity-input-label {
  display: block;
}

.activity-input {
  background: transparent;
  border: none;
  border-bottom: 1px solid #CBC9CF;
  margin-top: 20px;
  color: #CBC9CF;
  font-size: 1em;

}

.activity-input {
  width: 100%;
  outline: none;
}

.activity-button {
  color: #000000;
  border: none;
  border-radius: 2px;
  height: 32px;
  width: 152px;
  align-self: flex-end;
}

.activity-list-container {
  display: flex;
  justify-content: space-between;
  margin-top: 60px;
}

.activity-list {
  flex-basis: 40%;
}


/* ----------past activities section------ */

.past-activities-default {
  color: #CBC9CF;
  text-align: center;
}

.main-right-box-default {
  margin: 40px 40px 0px 40px;
}

.hidden {
  display: none;
}

